update protocolbindings html

--- a/html/protocolbindings.html
+++ b/html/protocolbindings.html
@@ -218,6 +218,11 @@ The example OCF protocol binding contains values for Resource Type (rt) and Inte
       </p>
       </section>      
 
+    </section>
+
+    <section>
+      <h2>Integration Patterns</h2>
+
 	  <figure id="fig-integration-patterns">
 		<img src="images/integration-patterns.png" style="width:80%"  />
         <figcaption>Integration Patterns</figcaption>
@@ -231,7 +236,7 @@ In the client Proxy integration pattern, the WoT Consumed Thing interface is exp
       
 	  <figure id="fig-client-proxy">
 		<img src="images/client-proxy.png" style="width:50%"  />
-        <figcaption>CLient Proxy Pattern</figcaption>
+        <figcaption>Client Proxy Pattern</figcaption>
       </figure>
       
       <p>
@@ -319,7 +324,7 @@ CRUD+N
     <section class='appendix'>
       <h2>Examples</h2>
       <p>
-        link to examples.
+      <a href="https://github.com/mjkoster/wot-protocol-binding/tree/master/td-examples-plugfest">TD Examples for Plugfest</a>
       </p>
     </section>
   </body>
